# todoist

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  .prettierrc  .rustfmt.toml  .sql-formatter.json  .tombi.toml  Cargo.toml  compose.yaml  db.json  package-lock.json  package.json  rust-toolchain.toml
.config/: bacon.toml
.zed/: debug.json  settings.json  tasks.json
apps/components/: Cargo.toml
apps/components/src/: lib.rs
apps/ingress/: Cargo.toml  index.html  nginx.conf
apps/ingress/scripts/: run.sh
apps/ingress/site/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
apps/ingress/site/public/.well-known/appspecific/: com.chrome.devtools.json
apps/ingress/site/scripts/: build-wasm.sh  trace-wasm.sh
apps/ingress/site/src/: root.tsx
apps/ingress/site/src/lib/: url.ts
apps/ingress/src/: main.rs
apps/site/: eslint.config.js  package.json  pnpm-lock.yaml  serve.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/site/interface/: Cargo.toml
apps/site/interface/src/: lib.rs
apps/site/scripts/: build-wasm.sh  trace-wasm.sh
apps/site/src/: entry.client.tsx  global.css  root.tsx
apps/site/src/@types/: interfaces.d.ts
apps/site/src/actions/: crud.ts
apps/site/src/components/: form.tsx  task-item.tsx
apps/site/src/lib/: utils.ts
crates/core/: Cargo.toml
crates/core/src/: enums.rs  lib.rs  main.rs  status.rs
crates/core/src/actions/: create.rs  get.rs
crates/core/src/models/: base.rs  done.rs  mod.rs  pending.rs
crates/dal/: Cargo.toml
crates/dal/src/: json.rs  lib.rs
crates/glue/: Cargo.toml
crates/network/actixsh/: Cargo.toml
crates/network/actixsh/src/: main.rs
crates/network/actixsh/src/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crates/network/axumsh/: Cargo.toml
crates/network/axumsh/src/: main.rs
crates/network/axumsh/src/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crates/network/hypersh/: Cargo.toml
crates/network/hypersh/src/: main.rs
crates/network/hypersh/src/actions/: create.rs  delete.rs  get.rs  update.rs
crates/network/rocketsh/: Cargo.toml
crates/network/rocketsh/src/: main.rs
crates/network/rocketsh/src/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crates/scripts/: test.sh
crates/services/auth/cluster/actixsh/: Cargo.toml
crates/services/auth/cluster/axumsh/: Cargo.toml
crates/services/auth/cluster/hypersh/: Cargo.toml
crates/services/auth/cluster/rocketsh/: Cargo.toml
crates/services/auth/core/: Cargo.toml
crates/services/auth/dal/: Cargo.toml
crates/services/auth/kernel/: Cargo.toml
crates/services/core/: Cargo.toml
crates/services/core/src/: lib.rs  main.rs  models.rs  status.rs
crates/services/core/src/actions/: create.rs  delete.rs  get.rs  update.rs
crates/services/dal/: Cargo.toml
crates/services/dal/migrations/: 20260316234728_setup_updated_at.sql  20260316234812_set_pubid.sql  20260401224014_create_tasks.sql
crates/services/dal/src/: json.rs  lib.rs  migrations.rs
crates/services/dal/src/connections/: sqlx_postgres.rs
crates/services/dal/src/tasks/: descriptors.rs  enums.rs  mod.rs  schema.rs
crates/services/dal/src/tasks/transactions/: create.rs  delete.rs  get.rs  update.rs
crates/services/sessions/cache/: Cargo.toml
crates/services/sessions/cache/src/: user_session.rs
crates/services/sessions/client/: Cargo.toml
crates/services/tasks/cluster/actixsh/: Cargo.toml
crates/services/tasks/cluster/actixsh/src/: main.rs
crates/services/tasks/cluster/actixsh/src/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crates/services/tasks/cluster/axumsh/: Cargo.toml
crates/services/tasks/cluster/axumsh/src/: main.rs
crates/services/tasks/cluster/axumsh/src/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crates/services/tasks/cluster/hypersh/: Cargo.toml
crates/services/tasks/cluster/hypersh/src/: main.rs
crates/services/tasks/cluster/hypersh/src/actions/: create.rs  delete.rs  get.rs  update.rs
crates/services/tasks/cluster/rocketsh/: Cargo.toml
crates/services/tasks/cluster/rocketsh/src/: main.rs
crates/services/tasks/cluster/rocketsh/src/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
crates/services/tasks/core/: Cargo.toml
crates/services/tasks/core/src/: models.rs  status.rs
crates/services/tasks/core/src/actions/: create.rs  delete.rs  get.rs  update.rs
crates/services/tasks/dal/: Cargo.toml
crates/services/tasks/dal/migrations/: 20260316234728_create_public_id.sql  20260401224014_create_tasks.sql  20260402221610_create_users.sql  20260402221617_create_user_tasks.sql
crates/services/tasks/dal/src/: json.rs  lib.rs  migrations.rs
crates/services/tasks/dal/src/connections/: sqlx_postgres.rs
crates/services/tasks/dal/src/tasks/: descriptors.rs  enums.rs  schema.rs
crates/services/tasks/dal/src/tasks/transactions/: create.rs  delete.rs  get.rs  update.rs
crates/services/tasks/scripts/: add_migration.sh
crates/settings/: Cargo.toml  Config.toml
crates/settings/config/: local.toml  prod.toml  test.toml
crates/settings/src/: auth.rs  cache.rs  database.rs  elasticsearch.rs  env.rs  error.rs  lib.rs  loader.rs  prelude.rs  server.rs  settings.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs  token.rs
crates/shared/src/hyper_utils/: extract_body.rs  extract_header.rs
crates/shared/src/logger/: elastic.rs  logging.rs  mod.rs
crates/shared/src/logger/network/: actix.rs  axum.rs  mod.rs  rocket.rs
scripts/: init-db.sh  test.sh
