#:tombi schema.strict = false
#:schema https://www.schemastore.org/cargo.json
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions

[workspace]
resolver = "3"
members  = [
  "apps/ingress",
  "apps/site/interface",
  "crates/network/*",
  "crates/services/*",
  "crates/shared",
]

[workspace.package]
edition    = "2024"
repository = "https://github.com/princemuel/todoist"
license    = "MIT OR Apache-2.0"
publish    = false

[workspace.dependencies]
## ######################
actix-web      = "4"
axum           = { version = "0.8" }
## #######################
clap           = "4"
dotenvy        = "0.15"
http-body-util = "0.1"
hyper          = "1"
hyper-util     = "0.1"
rocket         = "0.5"
serde          = "1"
serde_json     = "1"
tokio          = "1"

## #######################
dal    = { path = "crates/services/dal" }
engine = { path = "crates/services/core" }
shared = { path = "crates/shared" }

[workspace.lints.rust]
elided-lifetimes-in-paths = "warn"
# missing_docs = "warn"
unreachable_pub           = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc      = "allow"
module_name_repetitions = "allow"

await_holding_lock = "warn"  # Prevent async deadlocks
cast_lossless      = "warn"  # Prevent data truncation errors
expect_used        = "warn"  # No "documented" hidden crashes
panic              = "warn"  # No manual panics
todo               = "warn"  # No forgotten placeholders
unwrap_used        = "warn"  # No hidden crashes

[profile.release]
opt-level     = 2
strip         = true
lto           = "thin"
panic         = "abort"
codegen-units = 1
