#:tombi schema.strict = false
#:schema https://www.schemastore.org/cargo.json
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions

[workspace]
resolver = "3"
members  = [
  "apps/ingress",
  "apps/site/interface",
  "crates/services/auth/cluster/*",
  "crates/services/auth/core",
  "crates/services/auth/dal",
  "crates/services/tasks/cluster/*",
  "crates/services/tasks/core",
  "crates/services/tasks/dal",
  "crates/shared",
]

[workspace.package]
edition    = "2024"
repository = "https://github.com/princemuel/todoist"
license    = "MIT OR Apache-2.0"
publish    = false

[workspace.dependencies]
## ######################
actix-web      = "4"
axum           = { version = "0.8" }
## #######################
clap           = "4"
dotenvy        = "0.15"
http-body-util = "0.1"
hyper          = "1"
hyper-util     = "0.1"
rocket         = "0.5"
serde          = "1"
serde_json     = "1"
tokio          = "1"

## #######################
auth      = { path = "crates/services/auth" }
auth_core = { path = "crates/services/auth/core" }
auth_dal  = { path = "crates/services/auth/dal" }
shared    = { path = "crates/shared" }
task_core = { path = "crates/services/tasks/core" }
task_dal  = { path = "crates/services/tasks/dal" }

[workspace.lints.rust]
elided-lifetimes-in-paths = "warn"
# missing_docs = "warn"
unreachable_pub           = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

missing_errors_doc      = "allow"
module_name_repetitions = "allow"

await_holding_lock = "warn"  # Prevent async deadlocks
cast_lossless      = "warn"  # Prevent data truncation errors
expect_used        = "warn"  # No "documented" hidden crashes
panic              = "warn"  # No manual panics
todo               = "warn"  # No forgotten placeholders
unwrap_used        = "warn"  # No hidden crashes

[profile.release]
opt-level     = 2
strip         = true
lto           = "thin"
panic         = "abort"
codegen-units = 1
