#:tombi schema.strict = false
#:schema https://www.schemastore.org/cargo.json
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions

[workspace]
resolver = "3"
members  = [
  "apps/ingress",
  "apps/components",
  "crates/services/auth/cluster/*",
  "crates/services/auth/core",
  "crates/services/auth/dal",
  "crates/services/auth/kernel",
  "crates/services/sessions/cache",
  "crates/services/sessions/client",
  "crates/services/tasks/cluster/*",
  "crates/services/tasks/core",
  "crates/services/tasks/dal",
  "crates/settings",
  "crates/shared",
]

[workspace.package]
edition    = "2024"
repository = "https://github.com/princemuel/todoist"
license    = "MIT OR Apache-2.0"
publish    = false

[workspace.dependencies]
## ######################
actix-web      = "4"
axum           = { version = "0.8" }
cfg-if         = "1"
chrono         = "0.4"
clap           = "4"
dotenvy        = "0.15"
http-body-util = "0.1"
hyper          = "1"
hyper-util     = "0.1"
reqwest        = "0.13"
rocket         = "0.5"
secrecy        = "0.10"
serde          = "1"
serde_json     = "1"
sqlx           = "0.8"
thiserror      = "2"
tokio          = "1"
uuid           = "1"

## #######################
auth           = { path = "crates/services/auth" }
auth_core      = { path = "crates/services/auth/core" }
auth_dal       = { path = "crates/services/auth/dal" }
auth_kernel    = { path = "crates/services/auth/kernel" }
session_client = { path = "crates/services/sessions/client" }
sessions_cache = { path = "crates/services/sessions/cache" }
settings       = { path = "crates/settings" }
shared         = { path = "crates/shared" }
task_core      = { path = "crates/services/tasks/core" }
task_dal       = { path = "crates/services/tasks/dal" }

[workspace.lints.rust]
future-incompatible                        = { level = "warn", priority = -1 }
# --- Safety & correctness ---
nonstandard-style                          = { level = "warn", priority = -1 }
rust-2018-idioms                           = { level = "warn", priority = -1 }
unknown-or-malformed-diagnostic-attributes = { level = "warn", priority = -1 }
unused                                     = { level = "warn", priority = -1 }

# --- Standalone (no clippy equivalent) ---
ambiguous-negative-literals   = "warn"
closure-returning-async-block = "warn"
deref-into-dyn-supertrait     = "warn"
ffi-unwind-calls              = "warn"  # remove if no FFI
impl-trait-redundant-captures = "warn"
let-underscore-drop           = "warn"
macro-use-extern-crate        = "deny"
meta-variable-misuse          = "deny"
missing-copy-implementations  = "warn"
# missing-docs                          = "deny"
missing-debug-implementations = "deny"
non-ascii-idents              = "deny"
redundant-imports             = "deny"
redundant-lifetimes           = "deny"
single-use-lifetimes          = "deny"
trivial-casts                 = "deny"
trivial-numeric-casts         = "deny"
unit-bindings                 = "deny"
unnameable-types              = "deny"
unreachable-pub               = "warn"
unsafe-code                   = "warn"
# unused-crate-dependencies                     = "warn"
unused-import-braces          = "deny"
unused-lifetimes              = "warn"
unused-qualifications         = "deny"
# unused-results                                = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# --- Allowed ---
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- Restriction lints (cherry-picked, not in all/pedantic) ---
absolute_paths                       = "deny"
alloc_instead_of_core                = "deny"
allow_attributes                     = "deny"
arbitrary_source_item_ordering       = "deny"  ##
as_conversions                       = "deny"
as_pointer_underscore                = "deny"
cfg_not_test                         = "deny"
clone_on_ref_ptr                     = "deny"
create_dir                           = "deny"
dbg_macro                            = "deny"
decimal_literal_representation       = "deny"
default_union_representation         = "deny"
deref_by_slicing                     = "warn"
else_if_without_else                 = "deny"
empty_drop                           = "deny"
empty_enum_variants_with_brackets    = "deny"
empty_structs_with_brackets          = "deny"
expect_used                          = "warn"
field_scoped_visibility_modifiers    = "deny"
filetype_is_file                     = "deny"
float_cmp_const                      = "deny"
fn_to_numeric_cast_any               = "deny"
host_endian_bytes                    = "deny"
if_then_some_else_none               = "warn"
indexing_slicing                     = "deny"
infinite_loop                        = "deny"
integer_division                     = "deny"
integer_division_remainder_used      = "deny"
large_include_file                   = "deny"
let_underscore_untyped               = "warn"
little_endian_bytes                  = "warn"
map_err_ignore                       = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget                           = "deny"
missing_asserts_for_indexing         = "deny"
# missing_inline_in_public_items  = "warn"
mixed_read_write_in_expression       = "deny"
# module_name_repetitions         = "deny"
needless_raw_strings                 = "deny"
non_zero_suggestions                 = "deny"
ossy_float_literal                   = "deny"
panic                                = "warn"
panic_in_result_fn                   = "deny"
pathbuf_init_then_push               = "deny"
pattern_type_mismatch                = "warn"
precedence_bits                      = "deny"
print_stdout                         = "deny"
pub_without_shorthand                = "deny"
rc_buffer                            = "deny"
rc_mutex                             = "deny"
redundant_test_prefix                = "deny"
redundant_type_annotations           = "deny"
ref_patterns                         = "warn"
renamed_function_params              = "deny"
rest_pat_in_fully_bound_structs      = "deny"
return_and_then                      = "deny"
self_named_module_files              = "deny"
std_instead_of_alloc                 = "deny"
std_instead_of_core                  = "deny"
str_to_string                        = "deny"
string_add                           = "deny"
string_lit_chars_any                 = "deny"
tests_outside_test_module            = "deny"
todo                                 = "warn"
unneeded_field_pattern               = "warn"
unseparated_literal_suffix           = "warn"
unused_trait_names                   = "deny"
unwrap_used                          = "warn"
# verbose_file_reads = "warn"

[profile.release]
opt-level     = 2
strip         = true
lto           = "thin"
panic         = "abort"
codegen-units = 1
