[package]
name                 = "ingress"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
actix-cors = "0.7"
actix-web  = { workspace = true }
mime_guess = "2"
rust-embed = "8"
tokio      = { workspace = true, features = ["macros", "rt-multi-thread"] }

server   = { package = "actixsh", path = "../../crates/network/actixsh/" }
task_dal = { workspace = true, features = ["sqlx-postgres"] }

[lints]
workspace = true
