[package]
name                 = "settings"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
dotenvy   = { workspace = true }
figment   = { version = "0.10", features = ["env", "toml"] }
secrecy   = { workspace = true, features = ["serde"] }
serde     = { workspace = true, features = ["derive"] }
sqlx      = { workspace = true, features = ["postgres"], optional = true }
thiserror = { workspace = true }

[features]
sqlx-postgres = ["dep:sqlx"]

[lints]
workspace = true
