[package]
name                 = "shared"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
actix-web      = { workspace = true, optional = true }
axum           = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper          = { workspace = true, features = ["full"], optional = true }
reqwest        = { workspace = true, optional = true }
rocket         = { workspace = true, features = ["json"], optional = true }
tokio          = { workspace = true, optional = true }
tower          = { version = "0.5", optional = true }

chrono     = { workspace = true, optional = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror  = { workspace = true }

futures            = "0.3"
futures-util       = "0.3"
tracing            = "0.1"
tracing-subscriber = "0.3"

settings = { workspace = true, features = ["sqlx-postgres"] }

[features]
actix   = ["dep:actix-web"]
axum    = ["dep:axum", "dep:tokio", "dep:tower"]
elastic = ["dep:chrono", "dep:reqwest", "dep:serde_json", "dep:tokio"]
hyper   = ["dep:http-body-util", "dep:hyper", "dep:serde_json"]
rocket  = ["dep:rocket"]

[lints]
workspace = true
