[package]
name              = "actixsh"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
actix-web = { workspace = true }
engine    = { workspace = true }
tokio     = { workspace = true, features = ["full"] }

dal    = { workspace = true, features = ["sqlx-postgres"] }
shared = { workspace = true, features = ["actix"] }
