[package]
name              = "actixsh"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
actix-web = { workspace = true }
task_core = { workspace = true }
tokio     = { workspace = true, features = ["full"] }

shared   = { workspace = true, features = ["actix"] }
task_dal = { workspace = true, features = ["sqlx-postgres"] }
