[package]
name              = "axumsh"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
axum      = { workspace = true }
task_core = { workspace = true }
tokio     = { workspace = true, features = ["full"] }

shared = { workspace = true, features = ["axum"] }
