[package]
name = "hypersh"
edition.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[dependencies]
engine = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
