[package]
name = "hypersh"
edition.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[dependencies]
engine = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["full"] }
