[package]
name                 = "sessions_cache"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono       = { version = "0.4", features = [] }
redis-module = "2"
serde        = { workspace = true, features = ["derive"] }
uuid         = { workspace = true }

[lints]
workspace = true
