[package]
name                 = "sessions_client"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
redis = { version = "1", features = ["tokio-comp"] }
tokio = { workspace = true, features = ["full"] }

shared = { workspace = true }

[lints]
workspace = true
