[package]
name                 = "task_core"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
publish.workspace    = true

[dependencies]
clap       = { workspace = true, features = ["derive"] }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
task_dal   = { workspace = true, features = ["json"] }

shared = { workspace = true }

[features]
default = ["json_fs"]
json_fs = ["task_dal/json"]

[lints]
workspace = true
