#:schema https://www.schemastore.org/cargo.json

[package]
name              = "task_dal"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
cfg-if     = { workspace = true }
dotenvy    = { workspace = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx       = { version = "0.8", features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid"
], optional = true }
uuid       = { workspace = true, features = ["serde", "v7"] }

shared = { workspace = true }

[features]
default       = ["sqlx-postgres"]
json          = ["serde", "serde_json"]
sqlx-postgres = ["sqlx"]

[lints]
workspace = true
