#:schema https://www.schemastore.org/cargo.json

[package]
name              = "task_dal"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
cfg-if     = { workspace = true }
dotenvy    = { workspace = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx       = { workspace = true, features = [
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid"
], optional = true }
uuid       = { workspace = true, features = ["serde", "v7"] }

settings = { workspace = true, features = ["sqlx-postgres"] }
shared   = { workspace = true }

[features]
json          = ["serde", "serde_json"]
serde         = ["dep:serde"]
serde_json    = ["dep:serde_json"]
sqlx          = ["dep:sqlx"]
sqlx-postgres = ["sqlx"]

[lints]
workspace = true
