[package]
name              = "tactix"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
actix-web = { workspace = true }
tokio     = { workspace = true, features = ["full"] }

shared    = { workspace = true, features = ["actix"] }
task_core = { workspace = true }
task_dal  = { workspace = true, features = ["sqlx-postgres"] }
