[package]
name              = "taxum"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
axum  = { workspace = true }
tokio = { workspace = true, features = ["full"] }

shared    = { workspace = true, features = ["axum"] }
task_core = { workspace = true }
task_dal  = { workspace = true }
