[package]
name              = "typer"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
http-body-util = { workspace = true }
hyper          = { workspace = true, features = ["full"] }
hyper-util     = { workspace = true, features = ["full"] }
serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["full"] }

shared    = { workspace = true, features = ["hyper"] }
task_core = { workspace = true }
task_dal  = { workspace = true }
