[package]
name              = "tocket"
version           = "0.0.0"
edition.workspace = true
license.workspace = true
publish           = false

[dependencies]
rocket = { workspace = true }

shared    = { workspace = true, features = ["rocket"] }
task_core = { workspace = true }
task_dal  = { workspace = true }
